--- a/abs_so_minimum_quantity/i18n/es.po
+++ b/abs_so_minimum_quantity/i18n/es.po
@@ -4,30 +4,31 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0-20190511\n"
+"Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-25 12:54+0000\n"
-"PO-Revision-Date: 2020-06-25 14:56+0200\n"
-"Last-Translator: <>\n"
+"POT-Creation-Date: 2021-10-26 12:01+0000\n"
+"PO-Revision-Date: 2021-10-26 14:03+0200\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
 "Language: es\n"
-"X-Generator: Poedit 2.2.4\n"
+"X-Generator: Poedit 2.4.1\n"
+
+#. module: abs_so_minimum_quantity
+#. openerp-web
+#: code:addons/abs_so_minimum_quantity/static/src/js/website_sale_comparison.js:0
+#, python-format
+msgid "Compare Products"
+msgstr "Comparar productos"
 
 #. module: abs_so_minimum_quantity
 #: model:ir.model.fields,field_description:abs_so_minimum_quantity.field_product_product__minimum_order_quantity
 #: model:ir.model.fields,field_description:abs_so_minimum_quantity.field_product_template__minimum_order_quantity
 msgid "Minimum Order Quantity"
-msgstr "Cantidad Mínima del Pedido"
-
-#. module: abs_so_minimum_quantity
-#: code:addons/abs_so_minimum_quantity/model/sale_order.py:39
-#, python-format
-msgid "Minimum order quantity of the product is "
-msgstr "La cantidad mínima de pedido del producto es "
+msgstr "Cantidad mínima de pedido"
 
 #. module: abs_so_minimum_quantity
 #: model:ir.model,name:abs_so_minimum_quantity.model_product_template
@@ -36,11 +37,17 @@ msgstr "Plantilla de producto"
 
 #. module: abs_so_minimum_quantity
 #: model:ir.model,name:abs_so_minimum_quantity.model_sale_order
-msgid "Sale Order"
+msgid "Sales Order"
 msgstr "Pedido de venta"
+
+#. module: abs_so_minimum_quantity
+#: code:addons/abs_so_minimum_quantity/model/sale_order.py:0
+#, python-format
+msgid "The minimum quantity of the product %s is %s"
+msgstr "La cantidad mínima del producto %s es %s"
 
 #. module: abs_so_minimum_quantity
 #: model:ir.model.fields,help:abs_so_minimum_quantity.field_product_product__minimum_order_quantity
 #: model:ir.model.fields,help:abs_so_minimum_quantity.field_product_template__minimum_order_quantity
-msgid "This field display minimum order qunatity"
-msgstr "Este campo muestra la cantidad mínima del pedido"
+msgid "This field display minimum order quantity"
+msgstr "Este campo muestra la cantidad mínima de pedido"
