--- a/hr_payroll/i18n/es.po
+++ b/hr_payroll/i18n/es.po
@@ -1616,7 +1616,7 @@ msgstr "¿Realizar orden de pago? "
 #. module: hr_payroll
 #: model:res.groups,name:hr_payroll.group_hr_payroll_manager
 msgid "Manager"
-msgstr "Responsable"
+msgstr "Administrador"
 
 #. module: hr_payroll
 #: model:ir.model.fields,field_description:hr_payroll.field_hr_payslip_line__condition_range_max
@@ -1774,7 +1774,7 @@ msgstr "Nómina_{{ (object.name or '') }}"
 #. module: hr_payroll
 #: model:res.groups,name:hr_payroll.group_hr_payroll_user
 msgid "Officer"
-msgstr "Oficial"
+msgstr "Usuario"
 
 #. module: hr_payroll
 #: model:ir.model.fields,field_description:hr_payroll.field_res_config_settings__option
