--- a/hr_payroll_account/i18n/es.po
+++ b/hr_payroll_account/i18n/es.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-01-04 07:49+0000\n"
-"PO-Revision-Date: 2022-01-04 08:53+0100\n"
+"PO-Revision-Date: 2022-07-27 13:50+0200\n"
+"Last-Translator: \n"
 "Language-Team: \n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.0\n"
-"Last-Translator: \n"
-"Language: es_ES\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. module: hr_payroll_account
 #: model_terms:ir.ui.view,arch_db:hr_payroll_account.hr_contract_form_inherit
@@ -48,9 +48,12 @@ msgid ""
 "As you installed the payroll accounting module you have to choose Debit and "
 "Credit account for at least one salary rule in the choosen Salary Structure."
 msgstr ""
-"Al instalar el módulo de contabilidad de nómina, debe elegir la cuenta de "
-"débito y crédito para al menos una regla de salario en la estructura "
-"salarial elegido."
+"La estructura salarial que estas usando para generar la nómina, debe "
+"disponer de al menos una regla de salario que disponga de una cuenta "
+"deudora y una cuenta acreedora.\n"
+"Puedes consultar mas información, accediendo a la documentación de Daeris: "
+"Finanzas / Nómina / Contabilidad y Pagos / Gestionar la contabilidad de las "
+"nóminas."
 
 #. module: hr_payroll_account
 #: model:ir.model.fields,field_description:hr_payroll_account.field_hr_payslip_line__account_credit
