--- a/pos_bag_charges/i18n/es.po
+++ b/pos_bag_charges/i18n/es.po
@@ -7,18 +7,20 @@ msgstr ""
 "Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-01-05 13:18+0000\n"
-"PO-Revision-Date: 2022-01-05 13:18+0000\n"
+"PO-Revision-Date: 2022-08-02 06:31+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. module: pos_bag_charges
 #: model:ir.model.fields,field_description:pos_bag_charges.field_pos_config__allow_bag_charges
 msgid "Allow Bag Charges"
-msgstr "Permitir cargos por equipaje"
+msgstr "Permitir cobrar bolsas"
 
 #. module: pos_bag_charges
 #. openerp-web
@@ -30,7 +32,7 @@ msgstr "Bolsa"
 #. module: pos_bag_charges
 #: model:ir.model.fields,field_description:pos_bag_charges.field_pos_config__pos_bag_category_id
 msgid "Bag Charges Category"
-msgstr "Categoría de cargos por equipaje"
+msgstr "Categoría de cobro de bolsas"
 
 #. module: pos_bag_charges
 #. openerp-web
@@ -44,22 +46,22 @@ msgstr "Cancelar"
 #: code:addons/pos_bag_charges/static/src/xml/pos_bag_charges.xml:0
 #, python-format
 msgid "List of Bag Charges"
-msgstr "Lista de cargos por equipaje"
+msgstr "Lista de cobros de bolsas"
 
 #. module: pos_bag_charges
 #: model:pos.category,name:pos_bag_charges.pos_bag_category_1
 msgid "POS Bag"
-msgstr "Bolsa de punto de venta"
+msgstr "Bolsas de TPV"
 
 #. module: pos_bag_charges
 #: model_terms:ir.ui.view,arch_db:pos_bag_charges.inherit_view_pos_bag_charges_form
 msgid "POS Bag Charges"
-msgstr "Cargos por bolsa de punto de venta"
+msgstr "Configuración del TPV"
 
 #. module: pos_bag_charges
 #: model:ir.model,name:pos_bag_charges.model_pos_config
 msgid "Point of Sale Configuration"
-msgstr "Configuración de punto de venta"
+msgstr "Configuración del TPV"
 
 #. module: pos_bag_charges
 #. openerp-web
@@ -71,4 +73,4 @@ msgstr "Imagen del producto"
 #. module: pos_bag_charges
 #: model_terms:ir.ui.view,arch_db:pos_bag_charges.inherit_view_pos_bag_charges_form
 msgid "Select Bag Category"
-msgstr "Seleccionar categoría de bolsa"
+msgstr "Seleccionar categoría de bolsas"
